--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
-        "vsmoraes/laravel-pdf": "^2.0"
+        "vsmoraes/laravel-pdf": "^2.0",
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
