--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME='Supplies Inventory Management System'
-APP_ENV=local
-APP_KEY=base64:HWQ4B8/2segWMHryuPRdcIBbjXoMH/sVX/UNtHa2eYY=
+APP_ENV=production
+APP_KEY=base64:hsZ4HHIAsY3ubjVF8tcd1vNYU4gxCvYsEVrXreDUmlg=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -13,8 +13,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sims
 DB_USERNAME=root
-DB_PASSWORD=
-DB_DUMP=C:\xampp\mysql\bin
+DB_PASSWORD=PUP2017*
+DB_DUMP="C:\Program Files\MySQL\MySQL Server 5.7\bin"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
