--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME='Supplies Inventory Management System'
-APP_ENV=debug
+APP_ENV=development
 APP_KEY=base64:hsZ4HHIAsY3ubjVF8tcd1vNYU4gxCvYsEVrXreDUmlg=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
@@ -14,7 +14,7 @@ DB_PORT=3306
 DB_DATABASE=sims
 DB_USERNAME=root
 DB_PASSWORD=
-DB_DUMP="C:\Program Files\MySQL\MySQL Server 5.7\bin"
+DB_DUMP="C:\xampp\apache\bin"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
