Replaced Development with Local

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME='Supplies Inventory Management System'
-APP_ENV=development
+APP_ENV=local
 APP_KEY=base64:hsZ4HHIAsY3ubjVF8tcd1vNYU4gxCvYsEVrXreDUmlg=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
