--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ APP_URL=http://localhost
 APP_LOG=daily
 MAIN_AGENCY='Department of Budget and Management'
 ORGANIZATION='Assets Management Office'
+DEFAULT_STATUS='pending'
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
