--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/bootstrap/compiled.php
 /node_modules
 /public/hot
 /public/storage
@@ -10,3 +11,5 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.env.*.php
+.env.php
