--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_LOG=daily
+APP_TIMEZONE=Asia/Singapore
 MAIN_AGENCY='Department of Budget and Management'
 ORGANIZATION='Assets Management Office'
 DEFAULT_STATUS = 'pending'
