--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravelcollective/html": "^5.4",
         "maatwebsite/excel": "~2.1.0",
         "owen-it/laravel-auditing": "^5.0",
+        "predis/predis": "^1.1",
         "vsmoraes/laravel-pdf": "^2.0",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
