Updated Env file for redis

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_DUMP="C:\xampp\apache\bin"
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
