--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_LOG=daily
 APP_TIMEZONE=Asia/Singapore
-MAIN_AGENCY='Department of Budget and Management'
-ORGANIZATION='Assets Management Office'
-DEFAULT_STATUS = 'pending'
+MAIN_AGENCY=
+ORGANIZATION=
+DEFAULT_STATUS=pending
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -16,7 +16,13 @@ DB_PORT=3306
 DB_DATABASE=sims
 DB_USERNAME=root
 DB_PASSWORD=
-DB_DUMP="C:\xampp\apache\bin"
+DB_DUMP=
+
+SQLSRV_CONNECTION=
+SQLSRV_HOST=
+SQLSRV_DATABASE=
+SQLSRV_USERNAME=
+SQLSRV_PASSWORD=
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
